Bug 623522 - Stop IMAP touching the preference service from background threads | Permanent Orange | TEST-UNEXPECTED-FAIL | test_dod.js | false == true; Patch by Standard8 and bienvenu; r=Standard8 for bienvenu's parts and r=bienvenu for Standard8's parts.